--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,6 +101,67 @@ a {
   opacity: 1;
 }
 
+/*  BUTTON  */
+.btn {
+  padding: 1.5rem 4rem;
+  text-transform: uppercase;
+  border-radius: 30px;
+  font-size: 1.8rem;
+  font-weight: 600;
+}
+
+.btn--primary {
+  background: var(--color-primary);
+  color: white;
+}
+
+.btn--secondary {
+  background: var(--color-secondary);
+  color: white;
+}
+
+.btn--accent {
+  background: var(--color-accent);
+  color: white;
+}
+
+.btn--outline {
+  background: white;
+  color: var(--color-heading);
+}
+
+.btn--streched {
+  margin-top: 3rem;
+  padding: 1rem 6rem;
+}
+
+/*  GRID  */
+
+.grid {
+  display: grid;
+}
+
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .grid--1x3 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+/*  CLIP PATH  */
+.block--skewed-left {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+}
+
+.block--skewed-right {
+  clip-path: polygon(0% 0%, 100% 0, 100% 90%, 0 100%);
+}
+
 /*  NAVIGATION BLOCK */
 .nav {
   display: flex;
@@ -159,5 +220,51 @@ a {
   .nav .nav__list {
     max-height: 100vh;
     opacity: 1;
+  }
+}
+
+/*  BODY BLOCK  */
+.body__block {
+  background: black;
+  color: white;
+  padding-bottom: 10rem;
+}
+
+.body__header {
+  text-align: center;
+  text-transform: capitalize;
+}
+
+.body__heading {
+  color: white;
+}
+
+.body__content {
+  opacity: 0.5;
+}
+
+img {
+  width: 100%;
+}
+
+.body__btn {
+  position: relative;
+  top: 3rem;
+}
+
+.banner {
+  margin-top: 5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .body__header {
+    align-self: center;
+    text-align: left;
+    padding-left: 2rem;
+  }
+
+  .body__heading {
+    font-size: 8rem;
+    margin: 0 1rem 1rem;
   }
 }
