--- a/styles/styles.css
+++ b/styles/styles.css
@@ -237,6 +237,10 @@ a {
   opacity: 0.6;
 }
 
+.nav__item {
+  margin: 2rem;
+}
+
 @media screen and (min-width: 1024px) {
   .nav {
     flex-wrap: nowrap;
@@ -281,6 +285,7 @@ a {
 
 .body__heading {
   color: white;
+  margin-top: 5rem;
 }
 
 .body__content {
@@ -377,6 +382,11 @@ img {
 }
 
 /*  LIST  */
+
+.domain {
+  padding: 2rem;
+}
+
 .domain__list {
   font-size: 2rem;
   text-align: center;
@@ -391,10 +401,18 @@ img {
   margin-bottom: 2rem;
 }
 
+.domain__heading {
+  margin-top: 5rem;
+}
+
 @media screen and (min-width: 768px) {
   .domain__list {
     margin: 3rem auto;
     grid-template-columns: repeat(3, 1fr);
+  }
+
+  .domain__content {
+    margin: 0 3rem;
   }
 }
 
@@ -419,6 +437,7 @@ img {
   position: relative;
   border-radius: 5px;
   overflow: hidden;
+  margin-bottom: 5rem;
 }
 
 .plan--popular .card__header {
@@ -508,15 +527,21 @@ img {
 /*  FEATURE BLOCK  */
 .feature__header {
   text-align: center;
-  margin-bottom: 5rem;
+  margin-bottom: 7rem;
 }
 
 .feature__heading {
   text-transform: capitalize;
+  margin-top: 12rem;
+  margin-bottom: 2rem;
 }
 
 .feature__header-content {
   margin: 1rem;
+}
+
+.feature__section {
+  padding: 2rem;
 }
 
 .feature__content {
