--- a/styles/styles.css
+++ b/styles/styles.css
@@ -513,6 +513,7 @@ img {
   }
   .plan {
     margin: 2rem auto;
+    transition: transform 0.3s;
   }
 
   .plan:hover {
@@ -521,6 +522,10 @@ img {
 
   .plan--popular {
     transform: scale(1.1);
+  }
+
+  .plan--popular:hover {
+    transform: scale(1.15);
   }
 }
 
